<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metal News</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Aggiorna</string>
    <string name="action_gplus">Condividi con GooglePlus</string>
    <string name="action_fb">Condividi con Facebook</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_1">Notizie</string>
    <string name="title_2">Recensioni</string>
    <string name="title_3">Contest</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_connection_text">Oops, nessuna connessione internet rilevata!</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_contest">ContestActivity</string>
    <string name="error_player">Errore nell\'inizializzazione di YouTubePlayer (%1$s)</string>
    <string name="app_id">1468249036731724</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_setting">Impostazioni</string>
    <string name="pref_notification">Attiva notifiche</string>
    <string name="pref_notification_summ">Notifica la presenza di nuove notizie</string>
    <string name="pref_notification_title">NOTIFICHE</string>
    <string name="pref_notification_frequency_summary">Scegli l\'intervallo di aggiornamento</string>
    <string name="pref_notification_frequency">Intervallo di aggiornamento</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="title_activity_groups_list">Gruppi da notificare</string>
    <string name="selected_groups">Gruppi da notificare</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="name_group">Nome gruppo</string>
	<string name="selected_groups_summary">Gruppi da notificare. Lascia la lista vuota per ricevere notifiche per ogni nuova notizia</string>
	<string name="articolo">Articolo</string>
	<string name="album">Album</string>
</resources>
