<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     
    <PreferenceCategory android:title="@string/pref_notification_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefNotification"
            android:summary="@string/pref_notification_summ"
            android:title="@string/pref_notification">
        </CheckBoxPreference>
              
        <ListPreference
            android:key="prefNotificationFrequency"
            android:entries="@array/notificationFrequency"
            android:summary="@string/pref_notification_frequency_summary"
            android:entryValues="@array/notificationFrequencyValues"
            android:title="@string/pref_notification_frequency"
            android:enabled="false" />
        
         <Preference
    	    android:key="gruppi"
     	    android:title="@string/selected_groups"
      		android:persistent="false">           
            
        </Preference>
    </PreferenceCategory>
 
</PreferenceScreen>